# yst

./: .travis.yml  README.markdown  RELANN-0.2.1.txt  cabal.project  changelog  flake.nix  stack.yaml  yst.cabal  yst.hs
.github/workflows/: ci.yml
Yst/: Build.hs  CSV.hs  Config.hs  Data.hs  Render.hs  Sqlite3.hs  Types.hs  Util.hs  Yaml.hs
demo/: april_events.st  config.yaml  date.st  event.st  eventgroup.st  events.st  events.yaml  includeCode.hs  index.st  index.yaml  layout.html.st  layout.html5.st  layout.tex.st  room101.txt  room203.txt
demo/files/css/: print.css  screen.css
demo/files/js/: nav.js
demo/templates/: date.st  eventgroup.st
