cabal-version:       2.2
name:                yst
version:             0.7.1.3
build-type:          Simple
synopsis:            Builds a static website from templates and data in YAML or
                     CSV files.
description:         `yst` is a tool for generating a static website
                     by filling string templates with data taken from
                     YAML text files (or, alternatively, CSV files or 
                     from a Sqlite3 database).
                     This approach combines the speed, security, and
                     ease of deployment of a static website with the
                     flexibility and maintainability of a dynamic site
                     that separates presentation and data.

category:            Text
license:             GPL-2.0-or-later
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
homepage:            http://github.com/jgm/yst
stability:           experimental
data-files:          README.markdown
                     changelog
                     demo/config.yaml
                     demo/templates/date.st
                     demo/templates/eventgroup.st
                     demo/april_events.st
                     demo/events.st
                     demo/templates/event.st
                     demo/events.yaml
                     demo/index.st
                     demo/index.yaml
                     demo/layout.html.st
                     demo/layout.tex.st
                     demo/room101.txt
                     demo/room203.txt
                     demo/files/css/print.css
                     demo/files/css/screen.css

Source-repository    head
  type:              git
  location:          git://github.com/jgm/yst.git

Executable           yst
  hs-source-dirs:    .
  main-is:           yst.hs
  other-modules:     Yst.Types,
                     Yst.Yaml,
                     Yst.Util,
                     Yst.Data,
                     Yst.Config,
                     Yst.Render,
                     Yst.Build,
                     Yst.CSV,
                     Yst.Sqlite3,
                     Paths_yst
  autogen-modules:   Paths_yst
  build-depends:     base >=3 && < 5,
                     HStringTemplate >= 0.8.8,
                     csv,
                     aeson >= 2.0,
                     yaml,
                     text,
                     scientific >= 0.2,
                     filepath,
                     containers,
                     directory,
                     time >= 1.5,
                     parsec,
                     lucid >= 2.9,
                     pandoc >= 2.14,
                     split,
                     HDBC,
                     HDBC-sqlite3
  default-language:   Haskell2010
  default-extensions:  CPP
  if impl(ghc >= 6.12)
    ghc-options:     -Wall -threaded -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options:     -Wall -threaded -fno-warn-orphans
